Code refactoring by adding superclass and fixed a bug of finding dest.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="sketch.js"></script>
   <script src="Cell.js"></script>
   <script src="Maze.js"></script>
+  <script src="Path-Finding/Pathfinding.js"></script>
   <script src="Path-Finding/BFS.js"></script>
   <script src="Helper-Classes/Queue.js"></script>
 
