changed paths from absolute to relative

--- a/Path-Finding/bfs/index.html
+++ b/Path-Finding/bfs/index.html
@@ -13,10 +13,10 @@
   </style>
   <script src="../../p5/p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="/Helper-Classes/Cell.js"></script>
-  <script src="/Helper-Classes/Maze.js"></script>
-  <script src="/Helper-Classes/Queue.js"></script>
-  <script src="/Path-Finding/Pathfinding.js"></script>
+  <script src="../../Helper-Classes/Cell.js"></script>
+  <script src="../../Helper-Classes/Maze.js"></script>
+  <script src="../..//Helper-Classes/Queue.js"></script>
+  <script src="../Pathfinding.js"></script>
   <script src="sketch.js"></script>
   <script src="BFS.js"></script>
 
