--- a/Path-Finding/dfs/index.html
+++ b/Path-Finding/dfs/index.html
@@ -15,7 +15,7 @@
   <!-- <script src="../../../addons/p5.sound.js"></script> -->
   <script src="../../Helper-Classes/Cell.js"></script>
   <script src="../../Helper-Classes/Maze.js"></script>
-  <script src="/Path-Finding/Pathfinding.js"></script>
+  <script src="../Pathfinding.js"></script>
   <script src="sketch.js"></script>
   <script src="DFS.js"></script>
 
