--- a/Path-Finding/random/index.html
+++ b/Path-Finding/random/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deapth First Search</title>
+  <title>Random Mouse Search</title>
   <style>
     body {
       padding: 0;
@@ -15,7 +15,7 @@
   <!-- <script src="../../../addons/p5.sound.js"></script> -->
   <script src="../../Helper-Classes/Cell.js"></script>
   <script src="../../Helper-Classes/Maze.js"></script>
-  <script src="/Path-Finding/Pathfinding.js"></script>
+  <script src="../Pathfinding.js"></script>
   <script src="sketch.js"></script>
   <script src="Random.js"></script>
 
