--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Graph Algorithms Visualizer</title>
 </head>
 <body>
-    <h1><a href='./Path-Finding/random/index.html'>Random Mouse Search</a></h1>
-    <h1><a href='./Path-Finding/dfs/index.html'>Depth First Search</a></h1>
-    <h1><a href='./Path-Finding/bfs/index.html'>Breadth First Search</a></h1>
+    <h1><a href='Path-Finding/random/index.html'>Random Mouse Search</a></h1>
+    <h1><a href='Path-Finding/dfs/index.html'>Depth First Search</a></h1>
+    <h1><a href='Path-Finding/bfs/index.html'>Breadth First Search</a></h1>
 </body>
 </html>
