creating the home page for the website
the mission is called saving private ayman's (he will figure it out) AKA the mission impossible
1. created the assets folder which will contain the media files for the project
2. redesigned the home page to avoid the 1900's vibes that the old code gave like if it was written by a fax machine
3. created the css file for styling in case if u don't know it's used to style the page components for real
4. I was just kidding u did an amazing job guys.
love ya.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graph Algorithms Visualizer</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="assets/65773.png"/>
 </head>
 <body>
-    <h1><a href='Path-Finding/random/index.html'>Random Mouse Search</a></h1>
-    <h1><a href='Path-Finding/dfs/index.html'>Depth First Search</a></h1>
-    <h1><a href='Path-Finding/bfs/index.html'>Breadth First Search</a></h1>
+   <div class="container">
+       <div class="box">
+        <span></span>
+        <div class="content">
+            <h2>Random Mouse Search</h2>
+            <p>A random search algorithm refers to an algorithm that uses some kind of randomness or probability (typically in the form of a pseudo-random number generator) in the defi- nition of the method, and in the literature, may be called a Monte Carlo method or a stochastic algorithm.</p>
+            <a href="Path-Finding/random/index.html">Try it now</a>
+       </div>
+   </div>
+
+   <div class="box">
+        <span></span>
+        <div class="content">
+            <h2>Depth First Search</h2>
+            <p>Depth-first search (DFS) is an algorithm for traversing or searching tree or graph data structures. The algorithm starts at the root node (selecting some arbitrary node as the root node in the case of a graph) and explores as far as possible along each branch before backtracking.</p>
+            <a href="Path-Finding/dfs/index.html">Try it now</a>
+       </div>
+   </div>
+
+
+   <div class="box">
+        <span></span>
+        <div class="content">
+            <h2>Breadth First Search</h2>
+            <p>an algorithm for searching a tree data structure for a node that satisfies a given property. It starts at the tree root and explores all nodes at the present depth prior to moving on to the nodes at the next depth level. Extra memory, usually a queue, is needed to keep track of the child nodes that were encountered but not yet explored.</p>
+            <a href="Path-Finding/bfs/index.html">Try it now</a>
+       </div>
+   </div>
+
+</div>
 </body>
 </html>
